# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  -eselect-emacs-0.3-r1.ebuild, +eselect-emacs-0.3-r2.ebuild:
  Install desktop file and icon only if X USE flag is set.

  20 Mar 2007; <ulm@gentoo.org> +eselect-emacs-0.3-r1.ebuild,
  +files/eselect-emacs-0.3-r119.patch:
  Make linking to XEmacs auxiliary programs really work.

  20 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-emacs-0.3.ebuild:
  changed SRC_URI as the tarball can't find its way to the official mirrors

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org> +metadata.xml:
  add metadata.xml

  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +eselect-emacs-0.3.ebuild:
  If Emacs was not found, link {c,e}tags to XEmacs versions;
  Suffix changed from .emacs- to -emacs-;
  Removal of man page symlinks in remove_symlinks() simplified;
  Use emacs- instead of emacs-emacs- as symlink target;
  Test if Info directory exists

  18 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +eselect-emacs-0.2.ebuild:
  version bump: 
  Remove man symlinks with all possible compress extensions;
  Honour ROOT in set_man_symlinks;
  Don't test for -z  since the empty string
    is a legal value (meaning no compression);
  We don't have providers but versions;
  Create symlinks for existing binaries only;
  Added gfdl to MANPAGELIST;
  Use MANPAGELIST instead of BINARYLIST for manpage removal;
  do_update() now updates to the newest available version;
  Cleanup env.d file in do_update()

  17 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  eselect-emacs-0.1.ebuild:
  Don't install env.d file since it might overwrite a valid configuration.

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/digest-eselect-emacs-0.1, +Manifest:
  adding Manifest and digests, so users can really use it

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>