@@ -5,6 +5,7 @@ SHA256 1eff3f70f532430f9314de674e95a978a49e918f1b2b507871c51a56201dbe0e files/es
 DIST eselect-emacs-0.1.tar.bz2 7345 RMD160 e4f0d09db620dfad1947af7003f6071e60bd2dc2 SHA1 ff5994d17d21f56d60746618d27c998fca611362 SHA256 21ebc83033a7eb0fc054301fd9f79cb3e18eaf05e65671c0b9668c0a4678b4c0
 DIST eselect-emacs-0.2.tar.bz2 7628 RMD160 40bc44061b37bece8ac493e2903b5de49cf177de SHA1 d19118b5c7d34a6afaa8b53141516040aafb56aa SHA256 6a43692cb63ced74abb82298dc98fc6c0e0d7b9a9eae8ae9d563f3051f2ab587
 DIST eselect-emacs-0.3.tar.bz2 7673 RMD160 f10d59abcd9b2e33c04e7ac279df844a3e008ade SHA1 0e71efba6e7f641d93d7f9cf00ae29f8feaa20f3 SHA256 4237153a55be647d59a37d85c0748b476da60d793b8721cee9f7a62d80c60769
+DIST eselect-emacs-0.4.tar.bz2 17414 RMD160 e390fc74cacc6235eb21e8a87c9f0746cd6f9880 SHA1 5d9b53b87a97663f57f3bb7827e5c45d148c9eef SHA256 a10e90626262061f00f6e7a2fc3885478e69c7c10acaf96239952e99b4c23e6b
 EBUILD eselect-emacs-0.1.ebuild 528 RMD160 e1c648335460edf026208a303b6269750be4b4b9 SHA1 2059a9273b350a3302baee0f9d40b5f4f3e7eed9 SHA256 9cf684388be458d73beafe08e53d139521bfc1d254b09890e3a3f7d56b422c6b
 MD5 6a0bcaba1a4108ba4898720b0e4002ef eselect-emacs-0.1.ebuild 528
 RMD160 e1c648335460edf026208a303b6269750be4b4b9 eselect-emacs-0.1.ebuild 528
@@ -21,18 +22,26 @@ EBUILD eselect-emacs-0.3.ebuild 508 RMD160 a3b40f1b48f51d0f35146f701fca9b3b3c619
 MD5 5b228b5ca3cdfe885432e168d929ff72 eselect-emacs-0.3.ebuild 508
 RMD160 a3b40f1b48f51d0f35146f701fca9b3b3c619999 eselect-emacs-0.3.ebuild 508
 SHA256 064322d62c6eecec6434032e2c5d7b1f882d96e2eb377a6b207efb59beba6fe6 eselect-emacs-0.3.ebuild 508
-MISC ChangeLog 2204 RMD160 81a125e7b4c290044814839f33309fb3e08fc640 SHA1 ad7726b3bd14248268bb79c3a6d1e3c740cc5b9d SHA256 fb7ef5f278a4949197ad1cdf1a61d0222696cb31c444b9c7e52f9c35033cd2be
-MD5 2961bdc7d3f699e8d60db629024f505d ChangeLog 2204
-RMD160 81a125e7b4c290044814839f33309fb3e08fc640 ChangeLog 2204
-SHA256 fb7ef5f278a4949197ad1cdf1a61d0222696cb31c444b9c7e52f9c35033cd2be ChangeLog 2204
-MISC ChangeLog~ 2296 RMD160 16634243021a48586d14b77fc2107dab8edc56fc SHA1 e70f85ab18947fc3694e40b007f6cb31626ffc53 SHA256 7b933f68388e21d9ad21209c32c1836e484f37fe3f80c30f68bd0e8dc21cd171
-MD5 db1e9acdeeaa7744cefc9c0b2e45bc61 ChangeLog~ 2296
-RMD160 16634243021a48586d14b77fc2107dab8edc56fc ChangeLog~ 2296
-SHA256 7b933f68388e21d9ad21209c32c1836e484f37fe3f80c30f68bd0e8dc21cd171 ChangeLog~ 2296
+EBUILD eselect-emacs-0.4.ebuild 578 RMD160 5410433306027fc1a4893796fc4c1748c66a6c69 SHA1 41b01ebe25d6063a776e608a1bc3c00137c6613e SHA256 c2deff16e7d8aaa95deb5d8b66a08e2f4232f7df5cda34df72419d123529f31a
+MD5 71f22ef424d1804b294b3fa3162811c6 eselect-emacs-0.4.ebuild 578
+RMD160 5410433306027fc1a4893796fc4c1748c66a6c69 eselect-emacs-0.4.ebuild 578
+SHA256 c2deff16e7d8aaa95deb5d8b66a08e2f4232f7df5cda34df72419d123529f31a eselect-emacs-0.4.ebuild 578
+MISC ChangeLog 2435 RMD160 e11fd77535da00d7b17ca4b77cf0afd17da266d5 SHA1 58d13cece6a0b218992f12b71e3f9490138b6467 SHA256 951c943aa2c1c1694cd899876c0e24aa3ad39c673fc0db9838798709a877b70e
+MD5 cdd409b32262d85fe2cf769bc145952d ChangeLog 2435
+RMD160 e11fd77535da00d7b17ca4b77cf0afd17da266d5 ChangeLog 2435
+SHA256 951c943aa2c1c1694cd899876c0e24aa3ad39c673fc0db9838798709a877b70e ChangeLog 2435
+MISC ChangeLog~ 2401 RMD160 48830e19b50eba4b9c9d91062973e633ab886bd9 SHA1 22c75fbea54ac453e7acd26639f33ae527cdddc6 SHA256 0e4bb26c412fb7e3b106bd3b2fd200da8a8ba25622a5be3a3500800462734858
+MD5 bf85e5aab32bf92994def66651d749ec ChangeLog~ 2401
+RMD160 48830e19b50eba4b9c9d91062973e633ab886bd9 ChangeLog~ 2401
+SHA256 0e4bb26c412fb7e3b106bd3b2fd200da8a8ba25622a5be3a3500800462734858 ChangeLog~ 2401
 MISC eselect-emacs-0.3-r2.ebuild~ 590 RMD160 a5102a1e548ba4f511b1b2732be42cf05bd809f0 SHA1 8fe50fcb35d489dbf471ce43db138a83cea34d93 SHA256 2a05d936ee32e688e4438689bd52d8738ad2950c55ed1c3d0524c1ee0be17bc1
 MD5 9a1690d5d8fdd752226bdac9688e9293 eselect-emacs-0.3-r2.ebuild~ 590
 RMD160 a5102a1e548ba4f511b1b2732be42cf05bd809f0 eselect-emacs-0.3-r2.ebuild~ 590
 SHA256 2a05d936ee32e688e4438689bd52d8738ad2950c55ed1c3d0524c1ee0be17bc1 eselect-emacs-0.3-r2.ebuild~ 590
+MISC eselect-emacs-0.4.ebuild~ 602 RMD160 59563c703cdac1e47cfaba5d2c95c99200a1ec95 SHA1 b0b87f412d3fe4781aa4edf9cd9476742409526c SHA256 86b306effafc7ffa6962c228ff9ea351ac9e494f095758c439b56f4ca369028f
+MD5 0c225f6805f5b7b5f4b40f0cb47cff1d eselect-emacs-0.4.ebuild~ 602
+RMD160 59563c703cdac1e47cfaba5d2c95c99200a1ec95 eselect-emacs-0.4.ebuild~ 602
+SHA256 86b306effafc7ffa6962c228ff9ea351ac9e494f095758c439b56f4ca369028f eselect-emacs-0.4.ebuild~ 602
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -49,3 +58,6 @@ SHA256 5b12ddf43083562b2123d44e9744e243b9eee078b1988d29742f17e193cb4fde files/di
 MD5 9bc880d045ed0c69c59f53bef36afe54 files/digest-eselect-emacs-0.3-r2 250
 RMD160 c44f4f37f6847bccd82b4544908aba20310ad4d2 files/digest-eselect-emacs-0.3-r2 250
 SHA256 5b12ddf43083562b2123d44e9744e243b9eee078b1988d29742f17e193cb4fde files/digest-eselect-emacs-0.3-r2 250
+MD5 b6ea4d9cfe754b9ba5c9cf81d7de7857 files/digest-eselect-emacs-0.4 253
+RMD160 c96a1e03498c72bb8d37a4e41030afbdc3056487 files/digest-eselect-emacs-0.4 253
+SHA256 c6ad42493ba5533d10fe43511e2b7a7559c559b008c36d4dd1c8b1fa9e26bbd8 files/digest-eselect-emacs-0.4 253
