@@ -3,14 +3,27 @@ MD5 d6377b27cec6ce886f606bcec6a1033f files/50ebuild-mode-gentoo.el 402
 RMD160 cbac77e8295123346c8f681b24bd4e0928e3801f files/50ebuild-mode-gentoo.el 402
 SHA256 d70c46148451866b86914a1620a282ec2d47d4e015a536c638cf6fa7b20ecd7c files/50ebuild-mode-gentoo.el 402
 DIST ebuild-mode-1.4.tar.bz2 2450 RMD160 13f26807de5f06a2672f5c92d06fbb71d8e7b855 SHA1 a652c1b5220f1e93ce290cdc1f017ace28804358 SHA256 3fa5d44f90c745a223d9b2eed55907a1064810f351279a5937032a839cc91cb6
+DIST ebuild-mode-1.5.tar.bz2 2510 RMD160 43308f4936225ad83d8cfbb188eda06eb455f98d SHA1 74242ad42c2b7d9d77641c3362aa9b4f9e2a5367 SHA256 e2a13679c0a16898573624bd521b25c5162272e3e073b971246173d8766286cc
 EBUILD ebuild-mode-1.4.ebuild 516 RMD160 53cba81c687a017975092d75b008fdc4e2c7bfae SHA1 4526bd96896e2f08580352244c6e26d107224fd7 SHA256 83e4f08ad02f98ea0b77f6d3c28d574a2758c8b58d9243d86299eb03ddc88b70
 MD5 7db40b367f25ea9a47c8b427332a3c1b ebuild-mode-1.4.ebuild 516
 RMD160 53cba81c687a017975092d75b008fdc4e2c7bfae ebuild-mode-1.4.ebuild 516
 SHA256 83e4f08ad02f98ea0b77f6d3c28d574a2758c8b58d9243d86299eb03ddc88b70 ebuild-mode-1.4.ebuild 516
-MISC ChangeLog 565 RMD160 093d9ad46e96be68dbf1af4681a1cd2e4c260f45 SHA1 2fc5246935fd6267390d1402badd5b6bec010fe5 SHA256 e74aedf4b0e65cd03e3851b22b95da79fb9c7a7e116bec3eb8f3f9fdde052bfb
-MD5 ad21b583dbbf4154dd35b0829650becb ChangeLog 565
-RMD160 093d9ad46e96be68dbf1af4681a1cd2e4c260f45 ChangeLog 565
-SHA256 e74aedf4b0e65cd03e3851b22b95da79fb9c7a7e116bec3eb8f3f9fdde052bfb ChangeLog 565
+EBUILD ebuild-mode-1.5.ebuild 483 RMD160 e7f6f9907d11decd843774d7a8a3c027ad968176 SHA1 47fb368092a3a220f6c57344da52237f88f05652 SHA256 d313bed9e840368e0ea531a279229724256bdd968547919cc1a9e0def39537ce
+MD5 6656f2c5d1ad11e966ec89d2813b2fde ebuild-mode-1.5.ebuild 483
+RMD160 e7f6f9907d11decd843774d7a8a3c027ad968176 ebuild-mode-1.5.ebuild 483
+SHA256 d313bed9e840368e0ea531a279229724256bdd968547919cc1a9e0def39537ce ebuild-mode-1.5.ebuild 483
+MISC ChangeLog 982 RMD160 dbc072762aedcebcfcb0e0c265f8a2e632661d04 SHA1 7c39910f1a3bc7d27a7d85889cbe5829495aa9be SHA256 db5f447b02c4d6de8738c03e9e6b4eba6f948dd502848361fdd81821ab697645
+MD5 d4ab09e8b2efe552ac4b6633eebc1af6 ChangeLog 982
+RMD160 dbc072762aedcebcfcb0e0c265f8a2e632661d04 ChangeLog 982
+SHA256 db5f447b02c4d6de8738c03e9e6b4eba6f948dd502848361fdd81821ab697645 ChangeLog 982
+MISC ChangeLog~ 950 RMD160 67245747d1cadb6c9943a7d98ca3689018d81512 SHA1 12c7fdf7c34c3791dc6b6e2b5c87d9fb2c9bdddf SHA256 defd19f91efb5fe9ef1f0d2514a19efeaf09a8e617b9d2faf2c6872208af706d
+MD5 e4291b0b875efe92cbabdf2c51527297 ChangeLog~ 950
+RMD160 67245747d1cadb6c9943a7d98ca3689018d81512 ChangeLog~ 950
+SHA256 defd19f91efb5fe9ef1f0d2514a19efeaf09a8e617b9d2faf2c6872208af706d ChangeLog~ 950
+MISC ebuild-mode-1.5.ebuild~ 516 RMD160 53cba81c687a017975092d75b008fdc4e2c7bfae SHA1 4526bd96896e2f08580352244c6e26d107224fd7 SHA256 83e4f08ad02f98ea0b77f6d3c28d574a2758c8b58d9243d86299eb03ddc88b70
+MD5 7db40b367f25ea9a47c8b427332a3c1b ebuild-mode-1.5.ebuild~ 516
+RMD160 53cba81c687a017975092d75b008fdc4e2c7bfae ebuild-mode-1.5.ebuild~ 516
+SHA256 83e4f08ad02f98ea0b77f6d3c28d574a2758c8b58d9243d86299eb03ddc88b70 ebuild-mode-1.5.ebuild~ 516
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -18,3 +31,6 @@ SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata
 MD5 ad62be3621c1045f0f84c1f8d61144a8 files/digest-ebuild-mode-1.4 244
 RMD160 6c611fb204819278fbd3fcbe3970ed24099e7529 files/digest-ebuild-mode-1.4 244
 SHA256 736b771076e95e264fae8f7c5965581eeedc471ba92bfa71d6c30784f1651bb6 files/digest-ebuild-mode-1.4 244
+MD5 361e98d100c52a26d7ab2a34ec82455d files/digest-ebuild-mode-1.5 244
+RMD160 11d1a2b39abc43431e87a5c574f94f2ed6ce7920 files/digest-ebuild-mode-1.5 244
+SHA256 03c8cbe3962f692e3970a2c0d19edb2fb1d4911b6da0db8670c53487b7bd9a70 files/digest-ebuild-mode-1.5 244
